--- a/i18n/fr/docusaurus-plugin-content-docs/current/01.overview/10.what_is_yunohost.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/01.overview/10.what_is_yunohost.mdx
@@ -38,7 +38,7 @@ Il ne manquait en fait qu’une interface d’administration au serveur de Beudb
 Constatant l’engouement croissant autour de YunoHost et de l’auto-hébergement en général, les développeurs et les nouveaux contributeurs ont alors décidé de prendre le cap d’une version 2, plus accessible, plus extensible, plus puissante, et qui prépare du bon café commerce équitable pour les lutins de Laponie.
 
 Le nom **YunoHost** vient de l’argot Internet anglais « [Y U NO](https://knowyourmeme.com/memes/y-u-no-guy) Host » signifiant approximativement « Pourquoi toi ne pas héberger ». Le [mème Internet](http://fr.wikipedia.org/wiki/M%C3%A8me_Internet) qui l’illustre est à peu près celui-ci :
-![Le mème en question, montrant un bonhomme au visage déformé par la frustation et questionnant « Y U NO Host »](image://dude_yunohost.jpg)
+![Le mème en question, montrant un bonhomme au visage déformé par la frustation et questionnant « Y U NO Host »](/img/dude_yunohost.jpg)
 
 ## Qu’est-ce que YunoHost n’est pas ?
 
