--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/25.domains/25.domains.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/25.domains/25.domains.mdx
@@ -54,7 +54,7 @@ Cependant, vous devez payer pour cela chaque année (environ 15€/an ... en fon
 
 Si vous avez déjà votre propre domaine, vous pouvez simplement cliquer sur « J'ai déjà un nom de domaine... ». Dans le cas contraire, afin de simplifier et d'automatiser la configuration DNS, nous vous suggérons de l'acheter auprès d'un [registrar dont l'API est supportée par YunoHost] (/providers/registrar).
 
-[Cpture d'écran de la page « Ajouter un domaine » où vous pouvez choisir « J'ai déjà un nom de domaine »](image://webadmin_domain_owndomain.png)
+[Cpture d'écran de la page « Ajouter un domaine » où vous pouvez choisir « J'ai déjà un nom de domaine »](/img/webadmin_domain_owndomain.png)
 
 [En savoir plus sur la configuration de la zone DNS](/install/post_install/dns_config)
 
