--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/15.filezilla.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/15.filezilla.md
@@ -1,81 +1,81 @@
 ---
-sidebar_label: Transfer files
-title: Exchange files with your server using a graphical interface
+sidebar_label: Transférer des fichiers
+title: Échanger des fichiers avec son serveur à l'aide d'une interface graphique
 ---
 
-This page explains how to exchange files (backup archives, music, pictures, movies...) with your server using a graphical interface for the (S)FTP protocol. This is an alternative to using `scp` which can be deemed technical and cryptic, or using an app like Nextcloud.
+Cette page explique comment échanger des fichiers (sauvegardes, musiques, photos, films...) avec son serveur à l'aide d'un outil graphique. C'est donc une méthode alternative au fait d'utiliser la commande `scp` qui peut être jugée technique et cryptique, ou de devoir installer Nextcloud.
 
-[FileZilla](https://filezilla-project.org/) can be used for this. It is free software and is available for Windows, GNU/Linux and macOS.
+[FileZilla](https://filezilla-project.org/) permet d'accomplir cela. Il s'agit d'un logiciel libre disponible pour Windows, GNU/Linux et macOS.
 
-## Download and install FileZilla
+## Télécharger et installer FileZilla
 
-Get the client from the [download page](https://filezilla-project.org/download.php?type=client). It should automatically detect the version needed for your computer. Otherwise, follow the instructions to [install the client](https://wiki.filezilla-project.org/Client_Installation)
+Vous pouvez télécharger FileZilla depuis [cette page](https://filezilla-project.org/download.php?type=client). Le site devrait détecter automatiquement la version nécessaire pour votre ordinateur. Sinon, suivez les instructions pour [installer le client](https://wiki.filezilla-project.org/Client_Installation)
 
-Install the program and run *Filezilla*.
+Installez le programme et lancez *Filezilla*.
 
 ## Configuration
 
-1. Click the *Site Manager* icon in the upper left to begin.
+1. Cliquez sur l'icône *Gestionnaire de Sites* en haut à gauche de sorte à créer une configuration utilisable ultérieurement.
 
-   ![Main screen of Filezilla](/img/filezilla_1.png)
+   ![écran principal de Filezilla](/img/filezilla_1.png)
 
-2. Click **New Site** and give a name the server you will be using : *Family* here. Fill the settings as on the screenshot (replace the server address with your own and leave the port field empty unless you changed your SSH port number, in which case use this port number), and click on **Connect**. (N.B. : if you want to interact with the [custom webapp](https://github.com/YunoHost-Apps/my_webapp_ynh) files, you should use a different user than `admin`. Refer to the custom webapp documentation.)
+2. Cliquez sur **Nouveau site** et donnez un nom au serveur que vous allez utiliser. Par exemple "Famille". Remplissez les paramètres comme sur la capture d'écran (en remplaçant l'adresse du serveur par la vôtre). Une fois terminé, cliquez sur **Connexion**. (N.B. : si vous souhaitez éditer les fichiers de l'application [custom webapp](https://github.com/YunoHost-Apps/my_webapp_ynh), il vous faudra utiliser un autre utilisateur que admin. Se référer à la documentation de custom webapp.)
 
-   ![Site manager screen](/img/filezilla_2.png)
+   ![écran du gestionnaire de site](/img/filezilla_2.png)
 
-3. You will get a warning as you connect for the first time to the server. *You can ignore it safely the first time you get it.*
+3. Vous recevrez un avertissement. *Vous pouvez l'ignorer s'il s'agit de la première connexion*.
 
-   ![warning about the unknown fingerprint of the server](/img/filezilla_3.png)
+   ![avertissement au sujet de l'empreinte inconnue du serveur](/img/filezilla_3.png)
 
-4. Filezilla is now asking the `admin` password to connect to your server.
+4. Filezilla vous demande maintenant le mot de passe `admin` pour vous connecter à votre serveur
 
-   ![credential screen asking for the password](/img/filezilla_4.png)
+   ![écran d'identification demandant le mot de passe](/img/filezilla_4.png)
 
-5. Once bookmarked, your server will be backup up and you will get this screen.
+5. Une fois cette configuration créée, elle sera réutilisable les fois suivantes.
 
-   ![View of the "site manager" with the newly server added](/img/filezilla_5.png)
+   ![la vue du "gestionnaire de site" avec le nouveau serveur ajouté](/img/filezilla_5.png)
 
-## Usage
+## Utilisation
 
-1. Connect to the Site created previously. *Your passwork might be asked again*
+1. Connectez-vous au Site créé précédemment. *Il se peut que le mot de passe soit redemandé.*
 
-   The left panel corresponds to your computer. The right panel corresponds to your remote YunoHost server. You can browse folders and drag-and-drop files between the two panels.
+   La partie gauche correspond à votre ordinateur. La partie droite correspond au serveur YunoHost distant. Vous pouvez naviguer dans les dossiers et faire des glisser-déposer entre les deux panneaux.
 
-   ![view while connected to a remote server](/img/filezilla_6.png)
+   ![la vue pendant la connexion à un serveur distant](/img/filezilla_6.png)
 
-2. In the right panel, you can browse to `/home/yunohost.backup/archives/` to find [backup archives](/administer/backups/).
+2. Dans le panneau de droite, vous pouvez aller dans `/home/yunohost.backup/archives/` pour trouver les archives de [sauvegardes](/administer/backups/).
 
-   ![path where backups are located on YunoHost](/img/filezilla_7.png)
+   ![le chemin où les sauvegardes sont situées sur YunoHost](/img/filezilla_7.png)
 
-   :::warning
-   <FAIcon icon="fa-cloud-download"/> Be sure to download both the `.tar.gz` and `.json` files.
-   :::
+:::warning
+<FAIcon icon="fa-cloud-download"/> Assurez-vous de télécharger à la fois le fichier `.tar.gz` et le fichier `.json`
+:::
 
-   ![Copy backups from YunoHost to local computer](/img/filezilla_8.png)
+![Copier les sauvegardes de YunoHost sur l'ordinateur local](/img/filezilla_8.png)
 
 ---
 
 Sources
 
-- [Official documentation](https://wiki.filezilla-project.org/FileZilla_Client_Tutorial_(en))
-- [General tutorial about using FileZilla](https://www.rc.fas.harvard.edu/resources/documentation/sftp-file-transfer/)
+- [Documentation officielle](https://wiki.filezilla-project.org/FileZilla_Client_Tutorial_(fr))
+- [Tutoriel général à Filezilla](https://www.rc.fas.harvard.edu/resources/documentation/sftp-file-transfer/)
 
-## Alternatives to Filezilla
+## Alternatives à Filezilla
 
-### GNU/Linux
+### Sous GNU/Linux
 
-From any recent GNU/Linux, you should be able to use the `file manager` to reach your server.
+Depuis n'importe quel GNU/Linux récent, vous devriez pouvoir utiliser le gestionnaire de fichiers pour accéder à votre serveur.
 
-Nautilus from Gnome3 and Dolphin from KDE have features similar to FileZilla, out of the box.
+Nautilus de Gnome3 et Dolphin de KDE intègrent de base des fonctionnalités similaires à FileZilla :
 
 - [Nautilus Connect](https://help.gnome.org/users/gnome-help/stable/nautilus-connect.html.en)
 - [Dolphin](https://docs.kde.org/stable5/en/dolphin/dolphin/location-bar.html#location-bar-editable-kioslaves)
 - [Tutorial for Nautilus and SFTP](https://www.techrepublic.com/article/how-to-use-linux-file-manager-to-connect-to-an-sftp-server/)
 
-### Windows
+### Sous Windows
 
-- [WinSCP](https://winscp.net/) is also a nice candidate for Windows
+- [WinSCP](https://winscp.net/) est aussi un bon candidat pour Windows
 
-### macOS
+### Sous macOS
 
-- [Cyberduck](https://cyberduck.io/) is a free software available on macOS
+- [Cyberduck](https://cyberduck.io/) logiciel libre pour macOS
