--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/25.domains/25.domains.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/25.domains/25.domains.mdx
@@ -13,7 +13,7 @@ Ogni volta che aggiungete un dominio, sia esso vostro o del quale abbiate facolt
 
 I domini possono essere configurati a partire dalla sezione 'Domini' della pagina webadmin, o attraverso la sezione `yunohost domain` da linea di comando.
 
-![L'interfaccia webadmin di gestione dei domini, con il pulsante "Aggiungere un dominio" e l'elenco dei domini](image://webadmin_domain.png)
+![L'interfaccia webadmin di gestione dei domini, con il pulsante "Aggiungere un dominio" e l'elenco dei domini](/img/webadmin_domain.png)
 
 ## 3 tipologie di domini
 
