--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/15.filezilla.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/15.filezilla.md
@@ -1,72 +1,72 @@
 ---
 sidebar_label: Transfer files
-title: Exchange files with your server using a graphical interface
+title: Scambiare i files con il proprio server tramite un'interfaccia grafica.
 ---
 
-This page explains how to exchange files (backup archives, music, pictures, movies...) with your server using a graphical interface for the (S)FTP protocol. This is an alternative to using `scp` which can be deemed technical and cryptic, or using an app like Nextcloud.
+Questa parte spiega come scambiare dei files (backup, musica, foto, video...) con il proprio server, servendosi di un'interfaccia grafica. Utilizzeremo un metodo alternativo al tradizionale comando `scp` perché troppo tecnico e criptico, o alla installazione di un'applicazione come Nextcloud.
 
-[FileZilla](https://filezilla-project.org/) can be used for this. It is free software and is available for Windows, GNU/Linux and macOS.
+Per compiere questa operazione utilizzeremo [FileZilla](https://filezilla-project.org/), un software libero disponibile per Windows, GNU/Linux et macOS.
 
-## Download and install FileZilla
+## Scaricare e installare FileZilla
 
-Get the client from the [download page](https://filezilla-project.org/download.php?type=client). It should automatically detect the version needed for your computer. Otherwise, follow the instructions to [install the client](https://wiki.filezilla-project.org/Client_Installation)
+Potete scaricare FileZilla [da questa pagina](https://filezilla-project.org/download.php?type=client). Il sito dovrebbe proporvi automaticamente la versione adatta al vostro sistema operativo. Nel caso contrario seguite le istruzioni per installare il [client](https://wiki.filezilla-project.org/Client_Installation) corretto.
 
-Install the program and run *Filezilla*.
+Installate e lanciate *FileZilla*
 
-## Configuration
+## Configurazione
 
-1. Click the *Site Manager* icon in the upper left to begin.
+1. Cliccate sull'icona in alto a sinistra *Site Manager*.
 
-   ![Main screen of Filezilla](/img/filezilla_1.png)
+   ![Pagina principale di Filezilla](/img/filezilla_1.png)
 
-2. Click **New Site** and give a name the server you will be using : *Family* here. Fill the settings as on the screenshot (replace the server address with your own and leave the port field empty unless you changed your SSH port number, in which case use this port number), and click on **Connect**. (N.B. : if you want to interact with the [custom webapp](https://github.com/YunoHost-Apps/my_webapp_ynh) files, you should use a different user than `admin`. Refer to the custom webapp documentation.)
+2. Cliccate su **New Site** e assegnate un nome al server che volete connettere: in questo esempio *Family*. Completate i parametri come nell'immagine (con i vostri dati) e cliccate su **Connect** (N.B. : se volete editare i file dell'applicazione [custom webapp](https://github.com/YunoHost-Apps/my_webapp_ynh), dovrete utilizzare un utente diverso da `admin`. Fate riferimento alla documentazione di custom webapp).
 
-   ![Site manager screen](/img/filezilla_2.png)
+   ![Schermata del site manager](/img/filezilla_2.png)
 
-3. You will get a warning as you connect for the first time to the server. *You can ignore it safely the first time you get it.*
+3. Apparirà un avviso poiché vi state collegando per la prima volta al server. *Se è la prima connessione, potete ignorarlo*
 
-   ![warning about the unknown fingerprint of the server](/img/filezilla_3.png)
+   ![Avviso per la fingerprint del server sconosciuta](/img/filezilla_3.png)
 
-4. Filezilla is now asking the `admin` password to connect to your server.
+4. Filezilla vi chiederà la password di `admin` del server.
 
-   ![credential screen asking for the password](/img/filezilla_4.png)
+   ![schermata per la richiesta della password](/img/filezilla_4.png)
 
-5. Once bookmarked, your server will be backup up and you will get this screen.
+5. Una volta salvato nei segnalibri, il server verrà salvato e vedrete questa schermata.
 
-   ![View of the "site manager" with the newly server added](/img/filezilla_5.png)
+   ![Schermata del "site manager" con il server appena aggiunto](/img/filezilla_5.png)
 
-## Usage
+## Utilizzo
 
-1. Connect to the Site created previously. *Your passwork might be asked again*
+1. Collegatevi al server con le credenziali salvate in precedenza. *A volte viene richiesta la password*
 
-   The left panel corresponds to your computer. The right panel corresponds to your remote YunoHost server. You can browse folders and drag-and-drop files between the two panels.
+   La parte sinistra della finestra del programma si riferisce al vostro pc. La parte destra corrisponde al server YunoHost remoto. Potete navigare tra file e cartelle e effettuare drag-and-drop tra i due computer.
 
-   ![view while connected to a remote server](/img/filezilla_6.png)
+   ![vista della connessione al server remoto](/img/filezilla_6.png)
 
-2. In the right panel, you can browse to `/home/yunohost.backup/archives/` to find [backup archives](/administer/backups/).
+2. Nel pannello di destra, raggiungete `/home/yunohost.backup/archives` dove si trovano gli [archivi di backup](/administer/backups/)
 
-   ![path where backups are located on YunoHost](/img/filezilla_7.png)
+   ![la directory dove si trovano i backup di YunoHost](/img/filezilla_7.png)
 
    :::warning
    <FAIcon icon="fa-cloud-download"/> Be sure to download both the `.tar.gz` and `.json` files.
    :::
 
-   ![Copy backups from YunoHost to local computer](/img/filezilla_8.png)
+![Copia dei backup da YunoHost ad un computer locale](/img/filezilla_8.png)
 
 ---
 
-Sources
+Link a fonti esterne:
 
-- [Official documentation](https://wiki.filezilla-project.org/FileZilla_Client_Tutorial_(en))
-- [General tutorial about using FileZilla](https://www.rc.fas.harvard.edu/resources/documentation/sftp-file-transfer/)
+- [Documentazione ufficiale](https://wiki.filezilla-project.org/FileZilla_Client_Tutorial_(en))
+- [Tutorial generale su FileZilla](https://www.rc.fas.harvard.edu/resources/documentation/sftp-file-transfer/)
 
-## Alternatives to Filezilla
+## Alternative a FileZilla
 
 ### GNU/Linux
 
-From any recent GNU/Linux, you should be able to use the `file manager` to reach your server.
+Qualsiasi distribuzione recente di GNU/Linux dovrebbe permettere di accedere al server remoto utilizzando il gestore dei file.
 
-Nautilus from Gnome3 and Dolphin from KDE have features similar to FileZilla, out of the box.
+Nautilus di Gnome3 integra delle funzionalità simili a FileZilla:
 
 - [Nautilus Connect](https://help.gnome.org/users/gnome-help/stable/nautilus-connect.html.en)
 - [Dolphin](https://docs.kde.org/stable5/en/dolphin/dolphin/location-bar.html#location-bar-editable-kioslaves)
@@ -74,8 +74,8 @@ Nautilus from Gnome3 and Dolphin from KDE have features similar to FileZilla, ou
 
 ### Windows
 
-- [WinSCP](https://winscp.net/) is also a nice candidate for Windows
+- [WinSCP](https://winscp.net/) è un ottimo programma per Windows
 
-### macOS
+### MacOS
 
-- [Cyberduck](https://cyberduck.io/) is a free software available on macOS
+- [Cyberduck](https://cyberduck.io/) un programma libero per macOS
