docusaurus: misc fixes

--- a/docs/06.contribute/05.write_documentation/02.markdown_guide.mdx
+++ b/docs/06.contribute/05.write_documentation/02.markdown_guide.mdx
@@ -97,7 +97,7 @@ All that remains is to designate the anchor to the text you want to make interac
 [My Anchor that refers to the title of the tables](#tables)
 ```
 
-[My Anchor Returns to Lists](#lists)
+[My Anchor Returns to Lists](#anchorname)
 
 [My Anchor that refers to the title of the tables](#tables)
 
